# indaleko_registry_service

./: .pre-commit-config.yaml  Makefile  README.md  main.py  models.py  publish-test.sh  publish.sh  pyproject.toml  test_registry_service.py
.github/workflows/: ci.yaml
registry_service/: models.py
registry_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/indaleko_registry_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_registry_holes.py
