# pyproject.toml for registry_service

[project]
name = "registry-service"
version = "0.1.0"
description = "Standalone semantic registration service for UUID and metadata mapping. (Consumer)"
readme = "README.md"
authors = [
  { name = "AI Intern", email = "intern@indaleko.ai" }
]
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "--cov=registry_service --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]

[ruff.linter]
line-length = 100
select = ["E", "F", "I", "N", "B"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
